--- a/index.html
+++ b/index.html
@@ -5,10 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Il nostro team</title>
- 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+</head>
+
 </head>
 
 <body>
+    <main class="container text-center">
+        <div class="row" id="team">
+        </div>
+
+        </div>
+
+    </main>
 
     <script src="./js/functions.js"></script>
     <script src="./js/script.js"></script>
