fix: ultime correzioni sullo style

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 
 <body>
     <main class="container text-center">
-        <div class="row" id="team">
+        <h1 class="p-2">OUR TEAM</h1>
+        <p class="p-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent in varius ante. Sed quis luctus
+            eros. Phasellus rutrum laoreet leo in consequat.</p>
+        <div class="row p-2" id="team">
         </div>
 
         </div>
